--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@ h3{
      font-size: 20px;
    }
 
-   video{
+   canvas{
      border: 5px;
      animation-duration: 3s;
-     animation-iteration-count: infinite;
      animation-name: example;
+     animation-iteration-count: infinite;
    }
 
    @keyframes example{
